--- a/ExcelAddInEquipmentDatabase/Properties/Settings.settings
+++ b/ExcelAddInEquipmentDatabase/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="EquiBasepath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http:\\gensvw1178.gen.volvocars.net</Value>
     </Setting>
+    <Setting Name="TemplateBasepath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\Templates</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
