--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -4,23 +4,16 @@
   <configSections> 
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
  </configSections>
  
    <connectionStrings>
-    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
-      providerName="System.Data.SqlClient" />
-    <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
-      connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
-    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
-      connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+      <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" /><add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW" connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
+      <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
+   <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 
   
   <entityFramework>
@@ -45,7 +38,7 @@
       <maximumFileSize value="10MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{ABSOLUTE} [%thread] %level %logger - %message%newline%exception"/>
+        <conversionPattern value="%date{ABSOLUTE} [%thread] %level %logger - %message%newline%exception" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="DEBUG" />
@@ -67,6 +60,9 @@
       </setting>
       <setting name="EquiBasepath" serializeAs="String">
         <value>http:\\gensvw1178.gen.volvocars.net</value>
+      </setting>
+      <setting name="TemplateBasepath" serializeAs="String">
+        <value>\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\Templates</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
