--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -13,13 +13,6 @@
    <connectionStrings>
       <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
          providerName="System.Data.SqlClient" />
-      <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
-         connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
-      <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
-         connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
-         providerName="System.Data.SqlClient" />
-      <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-         providerName="System.Data.EntityClient" />
       <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"
          providerName="System.Data.EntityClient" />
    </connectionStrings>
@@ -73,7 +66,7 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup><applicationSettings>
     <ExcelAddInEquipmentDatabase.Properties.Settings>
       <setting name="Helpfile" serializeAs="String">
-        <value>https://sway.com/csCS9cdjEpcpPhw0?ref=Link</value>
+        <value>https:\\sway.com\csCS9cdjEpcpPhw0?ref=Link</value>
       </setting>
       <setting name="EquiBasepath" serializeAs="String">
         <value>http:\\gensvw1178.gen.volvocars.net</value>
