--- a/EqUiWebUi/Web.Rel_VCT.config
+++ b/EqUiWebUi/Web.Rel_VCT.config
@@ -8,7 +8,7 @@
       connectionString="Data Source=GOTSVW1872.got.volvocars.net;Initial Catalog=TADATA;Persist Security Info=True;Integrated Security = true"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
-  
+
   <appSettings>
     <!--global-->
     <add key="SiteName" value="VCTA EQUI (POC)" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
@@ -17,9 +17,11 @@
     <add key ="DisabledAreas" value="PJV;WELDING;PlcSupervisie;STW040;VCSC;STO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--Maximo-->
-    <add key ="Maximo_ORGID" value="VCCSE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/> <!--VCCSE-->
-    <add key ="Maximo_SiteID" value="VCT" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/> <!--VCT-->
-<!--systems found for site VCT 
+    <add key ="Maximo_ORGID" value="VCCSE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--VCCSE-->
+    <add key ="Maximo_SiteID" value="VCT" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--VCT-->
+    <!--systems found for site VCT 
 HUVUD
 GEOLOC
 UTRANGER
@@ -27,9 +29,12 @@ BRAND
 FASTIGH
 ELDISTR
 DEP-->
-    <add key ="Maximo_LOCATION_SYSTEMID" value="HUVUD" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/> <!--HUVUD-->
-    <add key ="Maximo_ORG_SYSTEMID" value="ORG" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/> <!--????-->
-    <add key ="Maximo_TOPANCESTOR" value="TA" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/> <!--TA-->
+    <add key ="Maximo_LOCATION_SYSTEMID" value="HUVUD" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--HUVUD-->
+    <add key ="Maximo_ORG_SYSTEMID" value="ORG" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--????-->
+    <add key ="Maximo_TOPANCESTOR" value="TA" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--TA-->
   </appSettings>
 
   <log4net>
@@ -37,7 +42,7 @@ DEP-->
       <file value="D:\IIS\Logs\EquiWebui.log" xdt:Transform="Replace"/>
     </appender>
   </log4net>
-  
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
