--- a/EqUiWebUi/Web.Rel_VCCH.config
+++ b/EqUiWebUi/Web.Rel_VCCH.config
@@ -3,7 +3,6 @@
 <!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-<!--User BPPEQDB1-->
   <connectionStrings>
     <add name="EQUIConnectionString"
       connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Persist Security Info=True;Integrated Security = true"
@@ -12,22 +11,35 @@
 
   <appSettings>
     <!--global-->
-    <add key="SiteName" value="DEVELOPMENT VCGA EQUI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SiteName" value="VCCH EQUI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="EnableHangfire" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine;sto" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="DisabledAreas" value="PJV;WELDING;PlcSupervisie;STW040;VCSC;STO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="HangfireDetailsBasepath" value="http://gensvw1178.gen.volvocars.net:666/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key ="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--Maximo-->
-    <add key ="Maximo_ORGID" value="VCCBE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="Maximo_SiteID" value="VCGXXX" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="Maximo_LOCATION_SYSTEMID" value="PRODMID" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key ="Maximo_ORGID" value="VCCSE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--VCCSE-->
+    <add key ="Maximo_SiteID" value="VCCH" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--VCT-->
+    <!--systems found for site VCT 
+HUVUD
+GEOLOC
+UTRANGER
+BRAND
+FASTIGH
+ELDISTR
+DEP-->
+    <add key ="Maximo_LOCATION_SYSTEMID" value="HUVUD" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--HUVUD-->
     <add key ="Maximo_ORG_SYSTEMID" value="ORG" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="Maximo_TOPANCESTOR" value="A" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--????-->
+    <add key ="Maximo_TOPANCESTOR" value="TA" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--TA-->
   </appSettings>
 
   <log4net>
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender" xdt:Locator="Match(name)">
-      <file value="D:\IIS\Logs\EquiWebDEV.log" xdt:Transform="Replace"/>
+      <file value="D:\IIS\Logs\EquiWebui.log" xdt:Transform="Replace"/>
     </appender>
   </log4net>
 
