playing with VCCH config

--- a/EqUiWebUi/Web.Rel_VCCH.config
+++ b/EqUiWebUi/Web.Rel_VCCH.config
@@ -11,30 +11,24 @@
 
   <appSettings>
     <!--global-->
-    <add key="SiteName" value="VCCH EQUI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SiteName" value="VCCH EQUI (Charleston)" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="EnableHangfire" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="DisabledAreas" value="PJV;WELDING;PlcSupervisie;STW040;VCSC;STO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key ="DisabledAreas" value="PJV;VWSC;WELDING;PlcSupervisie;STW040;VCSC;STO;CycleTime" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--Maximo-->
-    <add key ="Maximo_ORGID" value="VCCSE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key ="Maximo_ORGID" value="VCCUS1" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--VCCSE-->
     <add key ="Maximo_SiteID" value="VCCH" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--VCT-->
-    <!--systems found for site VCT 
-HUVUD
-GEOLOC
-UTRANGER
-BRAND
-FASTIGH
-ELDISTR
-DEP-->
-    <add key ="Maximo_LOCATION_SYSTEMID" value="HUVUD" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <!--HUVUD-->
-    <add key ="Maximo_ORG_SYSTEMID" value="ORG" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <!--????-->
-    <add key ="Maximo_TOPANCESTOR" value="TA" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <!--TA-->
+    <!--systems found for site VCCH 
+PRIMARY
+DEPP-->
+    <add key ="Maximo_LOCATION_SYSTEMID" value="PRIMARY" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--I don't think VCCH use this-->
+    <add key ="Maximo_ORG_SYSTEMID" value="DEPP" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--VCCH-->
+    <add key ="Maximo_TOPANCESTOR" value="VCCH" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <log4net>
