--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -184,7 +184,7 @@
       </layout>
     </appender>
     <root>
-      <level value="INFO" />
+      <level value="WARN" />
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="RollingFile" />
     </root>
